--- a/NuEvtReco-Ch4/NuEvtReco.tex
+++ b/NuEvtReco-Ch4/NuEvtReco.tex
@@ -34,7 +34,7 @@ The efficiency of Pandora's reconstruction on $\nu_e$ interactions is shown in F
     \includegraphics[width=1.00\textwidth]{nureco/reco_e_01152020.pdf}
     \caption{\label{fig:nuereco:shower} After shower requirement}
     \end{subfigure}
-\caption{\label{fig:nuereco} a: Efficiency of the \texttt{SliceID} (black) and shower-requirement (blue) for $\nu_e$ events. b: data-MC comparison after \texttt{SliceID}. c: data-MC comparison after shower requirement. }
+\caption{\label{fig:nuereco} a: Efficiency of the \texttt{SliceID} (black) and shower-requirement (blue) for $\nu_e$ events. The black (blue) efficiency curve is defined as the fraction of all true $\nu_e$ interactions that are selected as the neutrino ($\nu_e$) candidate, folding in all selection stages including Pandora's pattern recognition and slicing, and the light and geometry-based SliceID~\ref{sec:sliceID} Events for which the slice candidate is identified as an overlay cosmic interaction rather than the true simulated neutrino do not count towards the efficiency, but beyond this requirement no strict cut is placed no the slice purity. b: data-MC comparison after \texttt{SliceID}. c: data-MC comparison after shower requirement. }
 \end{center}
 \end{figure}
 
