--- a/NuId-Ch3/NeutrinoID.tex
+++ b/NuId-Ch3/NeutrinoID.tex
@@ -16,7 +16,7 @@ The work presented in this note relies on the Pandora event reconstruction~\cite
     \begin{subfigure}[b]{0.7\textwidth}
     \centering
     \includegraphics[width=1.00\textwidth]{NuId-Ch3/Images/slice02.png}
-    \caption{\label{fig:slcieid:02} Implementation of the \texttt{SiceID} tool to isolate possible candidate $\nu$ interactions.  The selected candidate is highlighted, and shown in green.}
+    \caption{\label{fig:slcieid:02} Implementation of the \texttt{liceID} tool to isolate possible candidate $\nu$ interactions.  The selected candidate is highlighted, and shown in green.}
     \end{subfigure}
 \caption{\label{fig:sliceid} Succession of steps in cosmic removal performed using Pandora's topological pattern recognition combined with scintillation light information through the \texttt{NeutrinoID} tool.}
 \end{center}
@@ -24,7 +24,7 @@ The work presented in this note relies on the Pandora event reconstruction~\cite
 
 %\subsection{Slicing, Clustering and Vertexing}
 \subsection{Pandora Slicing, Clustering and Vertexing}
-The creation of a ``slice" is the first step of the Pandora processing. A slice is a collection of distinct reconstructed particles which belong to the same interaction, such as a cosmic muon and its Michel electron, or the muon and proton in a 1$\mu$1$p$ neutrino interaction. To produce slices, the Pandora cosmic pattern recognition is first run over all hits, aiming to construct muon tracks and any associated $\delta$-rays or Michel electrons under the cosmic hypothesis (fig.~\ref{fig:slcieid:00}). At this stage, obvious cosmic activity (through-going or out-of-time muons) is tagged using geometric information and discarded (fig.~\ref{fig:slcieid:01}). The remaining hit collection is used as input to Pandora and reconstructed both under the cosmic hypothesis and the neutrino hypothesis. A typical event contains approximately five slices at this stage. 
+The creation of a ``slice" is the first step of the Pandora processing. A slice is a collection of distinct reconstructed particles which belong to the same interaction, such as a cosmic muon and its Michel electron, or the muon and proton in a 1$\mu$1$p$ neutrino interaction. To produce slices, the Pandora cosmic pattern recognition is first run over all hits, aiming to reconstruct interactions under the cosmic hypothesis (fig.~\ref{fig:slcieid:00}). At this stage, obvious cosmic activity (through-going or out-of-time muons) is tagged using geometric information and discarded (fig.~\ref{fig:slcieid:01}). The remaining hit collection, made up of remnant cosmic-rays as well as possible neutrino interactions. These hits are input to a lightweight version of the Pandora reconstruction which generates 3D wire-frame of the event. A 3D slicing procedure then separates them into independent slices, which are reconstructed both under the cosmic hypothesis and the neutrino hypothesis. A typical event contains approximately five slices at this stage. 
 
 %\subsubsection{Clustering and Vertex Finding } 
 \par In order to reconstruct the interactions in three dimensions, Pandora needs to match the information from at least two different views and create a neutrino vertex. Pandora performs the 2D clustering on the hits in each slice and on each plane separately. Then a number of 3D candidate vertices is created by finding positions that project down onto the ends of the available 2D clusters. All of the possible vertex candidates are fed into the support vector machine (SVM) vertex selection, and the candidate with the highest SVM score is chosen. This 3D vertex is used to split any existing clusters that cover the vertex. Then the cluster matching algorithms are run; in these algorithms the clusters are compared between views and modified to improve the matching.
