Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
 \author[3]{Roxanne Guenette}
 \author[2]{Ryan LaZur}
 \author[2]{Michael Mooney}
-\author[3]{Sebasten Prince}
+\author[3]{Sebastien Prince}
 \author[3,4]{Roberto Soleti}
 \author[3,4]{Wouter Van De Ponteele}
 \author[1]{Maya Wospakrik}
