--- a/Tech-Ch1/Tech.tex
+++ b/Tech-Ch1/Tech.tex
@@ -77,7 +77,7 @@ The scaling factors for the Run 1, 2, and 3 combined EXT data set to match the f
 \end{itemize}
 The material presented in this tech-note was processed from tags \texttt{v08\_00\_00\_43} (MC / open-data) and \texttt{v08\_00\_00\_44} (detector systematics) of the \texttt{geniev30} branch of \texttt{searchingfornues} repository. $\nu_{\mu}$ NTuples and $\nu_e$ far-sideband NTuples were processed directly by the production team with tags \texttt{v08\_00\_00\_41} and \texttt{v08\_00\_00\_42} of \texttt{uboonecode} respectively.
 \par \textbf{Plotting} Plotting code used to load input NTuples, perform event selections, calculate systematic uncertainties, and correctly POT scale distributions for MC and data/MC comparisons is available in the \texttt{PELEE} repository: \url{https://github.com/ubneutrinos/PELEE}.
-\par \textbf{Sensitivity calculations} The SBNFit framework is used to extract full covariance matrices for analysis selections, assess analysis systematics, excercise the $\nu_{\mu}$ constraint and assess the analysis' sensitivity \cite{bib:sbnfitgit}.
+\par \textbf{Sensitivity calculations} The SBNFit framework is used to extract full covariance matrices for analysis selections, assess analysis systematics, exercise the $\nu_{\mu}$ constraint and assess the analysis' sensitivity \cite{bib:sbnfitgit}.
 
 \subsection{How to read plots in this note} A large fraction of plots in this note are data-simulation comparisons. This paragraph describes common features of these plots. An example data-MC comparison from the analysis' two-shower sideband is shown in figure~\ref{fig:exampleplot} to help orient the reader as different features are described. All plots, unless otherwise labeled, are POT normalized, following the procedure outlined in DocDB 15204~\cite{bib:POTscaling} with the POT labeled on the top-right corner. Data-simulation comparisons are accompanied by a legend which denotes the various event categories shown. Categories are described below:
 \begin{itemize}
